[gd_scene load_steps=5 format=3 uid="uid://bs088ww010jfq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0mp3k"]
[ext_resource type="Texture2D" uid="uid://8sdmp3vfxjk6" path="res://graphics/player.png" id="1_onjm7"]
[ext_resource type="Texture2D" uid="uid://bsdkgn05woqaa" path="res://graphics/aim.png" id="2_lyev5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ouei0"]
radius = 31.0161

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0mp3k")

[node name="PlayerImage" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_onjm7")

[node name="AimImage" type="Sprite2D" parent="PlayerImage"]
position = Vector2(0, -270)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lyev5")

[node name="BulletSpawn" type="Marker2D" parent="PlayerImage"]
position = Vector2(0, -410)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ouei0")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
